--- a/grafana/data.yaml
+++ b/grafana/data.yaml
@@ -1,20 +1,58 @@
+# config file version
 apiVersion: 1
 
+# list of datasources that should be deleted from the database
 deleteDatasources:
+#  - name: Graphite
+#    orgId: 1
 
-  datasources:
+# list of datasources to insert/update depending
+# what's available in the database
+datasources:
+  # <string, required> name of the datasource. Required
   - name: InfluxDB
+    # <string, required> datasource type. Required
     type: influxdb
+    # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
     access: proxy
+    # <int> org id. will default to orgId 1 if not specified
+    # orgId: 1
+    # <string> custom UID which can be used to reference this datasource in other parts of the configuration, if not specified will be generated automatically
+    # uid: grafana
+    # <string> url
     url: http://influxdb:8086
+    # <string> Deprecated, use secureJsonData.password
+    # password:
+    # <string> database user, if used
     user: grafana
+    # <string> database name, if used
     database: influxdb
+    # <bool> enable/disable basic auth
     basicAuth: 1
+    # <string> basic auth username
     basicAuthUser: grafana
+    # <string> Deprecated, use secureJsonData.basicAuthPassword
+    # basicAuthPassword:
+    # <bool> enable/disable with credentials headers
+    # withCredentials:
+    # <bool> mark as default datasource. Max one per org
     isDefault: true
+    # <map> fields that will be converted to json and stored in jsonData
     jsonData:
+      # graphiteVersion: '1.1'
+      # tlsAuth: true
+      # tlsAuthWithCACert: true
       sslmode: "disable"
       httpMode: GET
+    # <string> json object of data that will be encrypted.
     secureJsonData:
+      # tlsCACert: '/etc/ssl/cacert.pem'
+      # tlsClientCert: '/etc/ssl/cert.pem'
+      # tlsClientKey: '/etc/ssl/key.pem'
+      # <string> database password, if used
+      # password: 
+      # <string> basic auth password
+      # basicAuthPassword:
     version: 1
+    # <bool> allow users to edit datasources from the UI.
     editable: true
