--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -9,15 +9,16 @@ RUN apk add grafana
 # RUN rm etc/grafana.ini
 # RUN rm etc/conf.d/grafana
 
-COPY dashboard.yaml /usr/share/grafana/conf/provisioning/dashboards/
+
 COPY data.yaml /usr/share/grafana/conf/provisioning/datasources/
-COPY /dashboards/ftps.json /usr/share/grafana/conf/provisioning/dashboards/
-COPY /dashboards/grafana.json /usr/share/grafana/conf/provisioning/dashboards/
-COPY /dashboards/influxdb.json /usr/share/grafana/conf/provisioning/dashboards/
-COPY /dashboards/mysql.json /usr/share/grafana/conf/provisioning/dashboards/
-COPY /dashboards/nginx.json /usr/share/grafana/conf/provisioning/dashboards/
-COPY /dashboards/php_my_admin.json /usr/share/grafana/conf/provisioning/dashboards/
-COPY /dashboards/wordpress.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY dashboard.yaml /usr/share/grafana/conf/provisioning/dashboards/
+COPY ftps.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY grafana.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY influxdb.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY mysql.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY nginx.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY php_my_admin.json /usr/share/grafana/conf/provisioning/dashboards/
+COPY wordpress.json /usr/share/grafana/conf/provisioning/dashboards/
 
 COPY grafana.ini grafana.ini
 COPY grafana grafana
